# demo-bazel-detect-bzlmod-config-setting

./: BUILD.bazel  README.md  defs.bzl
